# radar-wtc-filter-tests

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_conda  README.md  calculate_distributions.py  data.yml  date_utils.py  docker-compose.yml  environment.yaml  environment.yml  filter.py  filters.yaml  logconf.yaml  make_wtc_masks.py  mask_calculation.yaml  plot_ppi_comparison.py  plot_ppis.py  plot_utils.py  pyproject.toml  run_container.sh  utils.py
config/: data.yml  filters.yaml  mask_calculation.yaml
masks/: 202303130030_fivim_PVOL_mask.h5  fianj_turbine_mask.h5  fikan_turbine_mask.h5  fikes_turbine_mask.h5  fikor_turbine_mask.h5  fikuo_turbine_mask.h5  filuo_turbine_mask.h5  finur_turbine_mask.h5  fipet_turbine_mask.h5  fiuta_turbine_mask.h5  fivih_turbine_mask.h5  fivim_turbine_mask.h5  mask_calculation.yaml
obstacle_data/: ef_efin_area1_obstdata_23_jan_2025.csv  ef_efin_area1_obstdata__2_nov_2023.csv
src/: calculate_distributions.py  distributions.mplstyle  filter.py  make_wtc_masks.py  plot_ppi_comparison.py  utils.py
tests/: README.md  __init__.py  test_azimuth_masking.py
